Terminato codice programma (finire javadoc e Readme)