@@ -9,27 +9,24 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+
 import org.json.simple.JSONObject;
 
 /**
- *
+ *Questa classe contiene i metodi che servono a creare/aggiornare il file .json che viene utilizzato per salvare
+ * le statistiche richieste
  */
 public class CreatingJSONDocument {
 
-    //private static int cityCounter = 0;
-
     /**
-     *
-     *
      * @param name
      * @param formattedDate
      * @param temp
      * @param feels_like
      * @param temp_min
      * @param temp_max
-     * @throws IOException
      */
-    public void fileWriter(String name, String formattedDate, double temp, double feels_like, double temp_min, double temp_max) throws IOException {
+    public void fileWriter(String name, String formattedDate, double temp, double feels_like, double temp_min, double temp_max) {
 
         JSONObject citiesObj = new JSONObject();
 
@@ -39,17 +36,6 @@ public class CreatingJSONDocument {
         citiesObj.put("feels_like", feels_like);
         citiesObj.put("temp_min", temp_min);
         citiesObj.put("temp_max", temp_max);
-
-        /*
-        JSONObject listOfTemps = new JSONObject();
-        citiesObj.put("Call N°", ++cityCounter);
-        listOfTemps.put("temp", temp);
-        listOfTemps.put("feels_like", feels_like);
-        listOfTemps.put("temp_min", temp_min);
-        listOfTemps.put("temp_max", temp_max);
-
-        citiesObj.put("Main", listOfTemps);
-        */
 
         try {
             // Writing to a file
@@ -66,17 +52,18 @@ public class CreatingJSONDocument {
             // Saving previous data to a String variable
             Path path = Paths.get("FileCities.json");
             Charset charset = StandardCharsets.UTF_8;
-            String content = new String(Files.readAllBytes(path), charset);
+            String content = Files.readString(path, charset);
 
             bufferedWriter = new BufferedWriter(new FileWriter(new File("FileCities.json"), false));
 
             content = content.replaceAll("]\n", ",\n");
             bufferedWriter.write(content);
-            if (file.length() == 0 && !content.contains("[")) bufferedWriter.write("[");
+            if (file.length() == 0 && !content.contains("[")) {
+                bufferedWriter.write("[");
+            }
             bufferedWriter.write(citiesObj.toJSONString() + "]\n");
 
             bufferedWriter.close();
-            //System.out.println("--> File updated successfully.");
         } catch (IOException e) {
             System.out.println("ERROR");
             System.out.println("--> File not updated");
